# ShroonCPPLogger

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  mkdocs.yml  readthedocs.yaml
cmake/: PeregrineCPPLoggerConfig.cmake  PeregrineCPPLoggerConfigVersion.cmake  PeregrineCPPLoggerTargets.cmake  ShroonCPPLoggerTargets.cmake
cmake/toolchains/: i686-w64-mingw32.cmake  x86_64-w64-mingw32.cmake
docs/: APIReference.md  Building.md  FormattingStyle.md  GettingStarted.md  index.md
docs/api/html/: CLIColors_8cpp.html  CLIColors_8cpp__incl.map  CLIColors_8cpp__incl.md5  CLIColors_8hpp.html  CLIColors_8hpp__dep__incl.map  CLIColors_8hpp__dep__incl.md5  CLIColors_8hpp__incl.map  CLIColors_8hpp__incl.md5  CLIColors_8hpp_source.html  LogLevels_8hpp.html  LogLevels_8hpp_source.html  Logger_8cpp.html  Logger_8cpp__incl.map  Logger_8cpp__incl.md5  Logger_8hpp.html  Logger_8hpp__incl.map  Logger_8hpp__incl.md5  Logger_8hpp_source.html  StringFormat_8cpp.html  StringFormat_8hpp.html  StringFormat_8hpp_source.html  annotated.html  classPeregrine_1_1Logger_1_1TextFormat-members.html  classPeregrine_1_1Logger_1_1TextFormat.html  classPeregrine_1_1Logger_1_1TextFormat__coll__graph.map  classPeregrine_1_1Logger_1_1TextFormat__coll__graph.md5  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  globals.html  globals_defs.html  graph_legend.html  group__DebugLoggingMacros.html  group__FormatFunctions.html  group__LogLevel.html  group__LoggingFunctions.html  (+16 more)
docs/api/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  groups_4.js  namespaces_0.js  searchdata.js
docs/api/xml/: CLIColors_8cpp.xml  CLIColors_8hpp.xml  LogLevels_8hpp.xml  Logger_8cpp.xml  Logger_8hpp.xml  StringFormat_8cpp.xml  StringFormat_8hpp.xml  classPeregrine_1_1Logger_1_1TextFormat.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  group__DebugLoggingMacros.xml  group__FormatFunctions.xml  group__LogLevel.xml  group__LoggingFunctions.xml  group__ReleaseLoggingMacros.xml  group__TextFormatFlags.xml  group__TextFormatting.xml  index.xml  namespacePeregrine.xml  namespacePeregrine_1_1Logger.xml
docs/source/: Building.rst  FormattingStyle.rst  GettingStarted.rst  build.sh  conf.py  index.rst
example/: main.cpp
include/Peregrine/Logger/: CLIColors.hpp  LogLevels.hpp  Logger.hpp  StringFormat.hpp
src/: CLIColors.cpp  CLIColors.hpp  LogLevels.hpp  Logger.cpp  Logger.hpp  StringFormat.cpp  StringFormat.hpp
